apps/paperless/base/paperless-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      volumes:
      - name: paperless-data-pvc
        persistentVolumeClaim:
          claimName: paperless-data-pvc
      - name: paperless-media-pvc
        persistentVolumeClaim:
          claimName: paperless-media-pvc
      - name: paperless-consume-pvc
        persistentVolumeClaim:
          claimName: paperless-consume-pvc
      containers:
      - name: paperless
        image: ghcr.io/paperless-ngx/paperless-ngx:2.20.14
        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
          requests:
            cpu: "250m"
            memory: "512Mi"
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: "/data/data"
          name: paperless-data-pvc
        - mountPath: "/data/media"
          name: paperless-media-pvc
        - mountPath: "/data/consume"
          name: paperless-consume-pvc
