apps/paperless/base/paperless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  namespace: paperless
spec:
  selector:
    app: paperless
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
