apps/paperless/base/paperless-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-httproute
  namespace: paperless
spec:
  hostnames:
    - paperless.lokal
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nginx-gateway
      namespace: default
      port: 443
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: paperless-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
