apps/paperless/base/paperless-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: paperless
spec:
  rules:
    - host: paperless.lokal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-clusterip
                port:
                  name: paperless-ip
